[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/Donate.gd" type="Script" id=1]
[ext_resource path="res://UI/lab_theme.tres" type="Theme" id=2]

[node name="Donate" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 834.0
margin_bottom = 460.0
custom_constants/separation = 5

[node name="info" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 814.0
margin_bottom = 27.0
text = "¡Ayúdanos a desarrollar más y mejores juegos! Apoya a los desarrolladores con una donación."
align = 1

[node name="info2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 814.0
margin_bottom = 59.0
text = "Es necesario tener algún tipo de conexión a internet activa y una cuenta de Enzona."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 814.0
margin_bottom = 357.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="10" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 123.0
margin_right = 258.0
margin_bottom = 169.458
size_flags_horizontal = 7
size_flags_vertical = 4
text = "$10"

[node name="15" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 278.0
margin_top = 123.0
margin_right = 536.0
margin_bottom = 169.458
size_flags_horizontal = 7
size_flags_vertical = 4
text = "$15"

[node name="20" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 556.0
margin_top = 123.0
margin_right = 814.0
margin_bottom = 169.458
rect_pivot_offset = Vector2( -537, 145 )
size_flags_horizontal = 7
size_flags_vertical = 4
text = "$20"

[node name="debug" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 362.0
margin_right = 814.0
margin_bottom = 389.0
custom_colors/font_color_shadow = Color( 0.921569, 0.870588, 0.870588, 1 )

[node name="close" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 394.0
margin_right = 814.0
margin_bottom = 440.458
text = "close"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/10" to="." method="donate_pressed" binds= [ "10cup" ]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/15" to="." method="donate_pressed" binds= [ "15cup" ]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/20" to="." method="donate_pressed" binds= [ "20cup" ]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
